# pretix

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.requirements  docker-compose.dev.yml  docker-compose.yml  plugins-requirements.txt
deployment/docker/supervisord/: pretixcron.conf
local/pretix-bank-sync/: DEVELOPER_EXPERIENCE_COMPARISON.md  INSTALLATION.md  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
local/pretix-bank-sync/pretix_bank_sync/: apps.py  models.py  signals.py  tasks.py  urls.py  views.py
local/pretix-bank-sync/pretix_bank_sync/migrations/: 0001_initial.py
local/pretix-bank-sync/pretix_bank_sync/services/: gocardless_service.py
local/pretix-bank-sync/pretix_bank_sync/templates/pretix_bank_sync/control/: settings.html  transactions.html
src/: package-lock.json
src/pretix/base/: middleware.py
src/pretix/base/migrations/: 0297_alter_customer_locale_alter_user_locale.py
src/pretix/locale/ang/LC_MESSAGES/: django.po
src/pretix/locale/de_Informal/LC_MESSAGES/: django.po
src/pretix/presale/management/commands/: updatestyles.py
src/pretix/presale/templates/pretixpresale/event/: checkout_base.html  checkout_confirm.html  fragment_cart.html  fragment_cart_box.html  fragment_checkoutflow.html  fragment_product_list.html  fragment_subevent_list.html  index.html
src/tests/: settings.py
