[project]
name = "pretix-bank-sync"
dynamic = ["version"]
description = "Sync bank account transactions via Enable Banking and automatically match them to orders"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "manu", email = "support@pretix.eu"},
]
maintainers = [
    {name = "manu", email = "support@pretix.eu"},
]

dependencies = [
    "requests>=2.25.0",
    "PyJWT>=2.0.0",
    "cryptography>=3.0.0",
]

[project.entry-points."pretix.plugin"]
pretix_bank_sync = "pretix_bank_sync:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/pretix/pretix-bank-sync"
repository = "https://github.com/pretix/pretix-bank-sync"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_bank_sync.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
